--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    <link  href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet"  href="styles.css">
     <title>Prakriti</title>
 </head>
 
@@ -30,10 +30,10 @@
 
 
             <ul id="menu">
-                <a href="#">
+                <a  href="#">
                     <li>Home</li>
                 </a>
-                <a href="#">
+                <a  href="https://prakriti-about.vercel.app/">
                     <li>About</li>
                 </a>
                 <div class="collections-sidebar-menu">
@@ -48,37 +48,37 @@
                         <input type="checkbox" id="touch">
 
                         <ul class="slide">
-                            <a class="collections-redirect" href="#">
+                            <a class="collections-redirect"  href="https://sabai-treasures-page.vercel.app/">
                                 <li>
                                     <img src="sabai-treasures.png" class="collections-img">
                                     <div>Sabai Treasures</div>
                                 </li>
                             </a>
-                            <a class="collections-redirect" href="#">
+                            <a class="collections-redirect"  href="https://bamboo-bliss-page-wye2.vercel.app/">
                                 <li>
                                     <img src="bamboo-bliss.png" class="collections-img">
                                     <div>Bamboo Bliss</div>
                                 </li>
                             </a>
-                            <a class="collections-redirect" href="#">
+                            <a class="collections-redirect"  href="https://terra-touch-page.vercel.app/">
                                 <li>
                                     <img src="terra-touch.png" class="collections-img">
                                     <div>Terra Touch</div>
                                 </li>
                             </a>
-                            <a class="collections-redirect" href="#">
+                            <a class="collections-redirect"  href="https://loom-legacy-page.vercel.app/">
                                 <li>
                                     <img src="loom-legacy.png" class="collections-img">
                                     <div>Loom Legacy</div>
                                 </li>
                             </a>
-                            <a class="collections-redirect" href="#">
+                            <a class="collections-redirect"  href="https://metal-essence-page.vercel.app/">
                                 <li>
                                     <img src="metal-essence.png" class="collections-img">
                                     <div>Metal Essence</div>
                                 </li>
                             </a>
-                            <a class="collections-redirect" href="#">
+                            <a class="collections-redirect"  href="#">
                                 <li>
                                     <img src="prakriti-collections.jpeg" class="collections-img">
                                     <div>Prakriti Collection</div>
@@ -95,10 +95,10 @@
 
 
                 </div>
-                <a href="#">
+                <a  href="#">
                     <li>Wishlist <i class='bx bxs-heart'></i></li>
                 </a>
-                <a href="#">
+                <a  href="#">
                     <li>Orders <i class="fa-solid fa-bag-shopping"></i></li>
                 </a>
             </ul>
@@ -110,8 +110,8 @@
 
 
         <div class="navbar-navigations">
-            <div class="options home"><a href="#">Home</a></div>
-            <div class="options about"><a href="#">About</a></div>
+            <div class="options home"><a  href="#">Home</a></div>
+            <div class="options about"><a  href="https://prakriti-about.vercel.app/">About</a></div>
             <div class="options collections">
 
 
@@ -125,37 +125,37 @@
                     </div>
                     <div class="list">
                         <ul>
-                            <a class="collections-redirect" href="#">
+                            <a class="collections-redirect"  href="https://sabai-treasures-page.vercel.app/">
                                 <li>
                                     <img src="sabai-treasures.png" class="collections-img">
                                     Sabai Treasures
                                 </li>
                             </a>
-                            <a class="collections-redirect" href="#">
+                            <a class="collections-redirect"  href="https://bamboo-bliss-page-wye2.vercel.app/">
                                 <li>
                                     <img src="bamboo-bliss.png" class="collections-img">
                                     Bamboo Bliss
                                 </li>
                             </a>
-                            <a class="collections-redirect" href="#">
+                            <a class="collections-redirect"  href="https://terra-touch-page.vercel.app/">
                                 <li>
                                     <img src="terra-touch.png" class="collections-img">
                                     Terra Touch
                                 </li>
                             </a>
-                            <a class="collections-redirect" href="#">
+                            <a class="collections-redirect"  href="https://loom-legacy-page.vercel.app/">
                                 <li>
                                     <img src="loom-legacy.png" class="collections-img">
                                     Loom Legacy
                                 </li>
                             </a>
-                            <a class="collections-redirect" href="#">
+                            <a class="collections-redirect"  href="https://metal-essence-page.vercel.app/">
                                 <li>
                                     <img src="metal-essence.png" class="collections-img">
                                     Metal Essence
                                 </li>
                             </a>
-                            <a class="collections-redirect" href="#">
+                            <a class="collections-redirect"  href="#">
                                 <li>
                                     <img src="prakriti-collections.jpeg" class="collections-img">
                                     Prakriti Collection
@@ -173,9 +173,9 @@
 
 
             </div>
-            <div class="options contact"><a href="#">Contact</a></div>
-            <div class="options wishlist"><a href="#">Wishlist <i class='bx bxs-heart'></i></a></div>
-            <div class="options orders"><a href="#">Orders</a></div>
+            <div class="options contact"><a  href="#">Contact</a></div>
+            <div class="options wishlist"><a  href="#">Wishlist <i class='bx bxs-heart'></i></a></div>
+            <div class="options orders"><a  href="#">Orders</a></div>
         </div>
     </div>
 
@@ -200,7 +200,7 @@
                 </h2>
                 <div class="description-begin">
                     <div class="price-quantity">
-                        <h1>₹3000</h1>
+                        <h1>₹2999</h1>
                         <div class="counter">
                             <button id="decrease">-</button>
                             <span id="quantity">Qty: 0</span>
@@ -277,7 +277,7 @@
                         <p>
                         <ul>
                             <li>Handcrafted: Each bag is uniquely made by skilled artisans</li>
-                            <li>Eco-friendly: Made from sustainable bamboo</li>
+                            <li>Eco-friendly: Made from sustainable substances</li>
                             <li>Versatile: Ideal for decorating living rooms, bedrooms, or gifting</li>
                         </ul>
                         </p>
@@ -297,9 +297,10 @@
                 <figure>
                     <img src="img4.jpg" class="figcaption-img">
                     <figcaption>
-                        <p class="description">
+                        <p class="description"><a style="text-decoration: none; color: #6E7753;"  href = "https://bamboo-bliss-storage-baskets.vercel.app/">
                             Bamboo Bliss Storage Baskets - Set of 3 Baskets
-                        </p>
+                        </a>
+</p>
                         <p class="price">
                             ₹799
                         </p>
@@ -308,9 +309,10 @@
                 <figure>
                     <img src="img8.jpg" class="figcaption-img">
                     <figcaption>
-                        <p class="description">
+                        <p class="description"><a style="text-decoration: none; color: #6E7753;"  href = "https://bamboo-bliss-decorative-tray.vercel.app/">
                             Bamboo Bliss Decorative Tray
-                        </p>
+                        </a>
+</p>
                         <br>
                         <p class="price">
                             ₹999
@@ -320,9 +322,10 @@
                 <figure>
                     <img src="linen-saree.png" class="figcaption-img">
                     <figcaption>
-                        <p class="description">
+                        <p class="description"><a style="text-decoration: none; color: #6E7753;" href = "#">
                             Handloom Linen Saree - Green - 1 Saree with Blouse Piece
-                        </p>
+                        </a>
+</p>
                         <p class="price">
                             ₹1999
                         </p>
@@ -427,25 +430,25 @@
             <div class="footer-categories-wrapper footer-head">
                 <h3>Categories</h3>
                 <div style="height: 0.2rem;"></div>
-                <div class="categories"><a href="#">Sabai Treasures</a></div>
-                <div class="categories"><a href="#">Bambooo Bliss</a></div>
-                <div class="categories"><a href="#">Terra Touch</a></div>
-                <div class="categories"><a href="#">Loom Legacy</a></div>
-                <div class="categories"><a href="#">Metal Essence</a></div>
-                <div class="categories"><a href="#">Prakriti Collections</a></div>
+                <div class="categories"><a  href="https://sabai-treasures-page.vercel.app/">Sabai Treasures</a></div>
+            <div class="categories"><a  href="https://bamboo-bliss-page-wye2.vercel.app/">Bambooo Bliss</a></div>
+            <div class="categories"><a  href="https://terra-touch-page.vercel.app/">Terra Touch</a></div>
+            <div class="categories"><a  href="https://loom-legacy-page.vercel.app/">Loom Legacy</a></div>
+            <div class="categories"><a  href="https://metal-essence-page.vercel.app/">Metal Essence</a></div>
+            <div class="categories"><a  href="#">Prakriti Collections</a></div>
             </div>
             <div class="footer-information-wrapper footer-head">
                 <h3>Information</h3>
                 <div style="height: 0.2rem;"></div>
-                <div class="information"><a href="#">About</a></div>
-                <div class="information"><a href="#">Contact</a></div>
-                <div class="information"><a href="#">Terms & Conditions</a></div>
+                <div class="information"><a  href="https://prakriti-about.vercel.app/">About</a></div>
+                <div class="information"><a  href="#">Contact</a></div>
+                <div class="information"><a  href="#">Terms & Conditions</a></div>
             </div>
             <div class="footer-quick-links-wrapper footer-head">
                 <h3>Quick Links</h3>
                 <div style="height: 0.2rem;"></div>
-                <div class="quick-links"><a href="#">Orders</a></div>
-                <div class="quick-links"><a href="#">About</a></div>
+                <div class="quick-links"><a  href="#">Orders</a></div>
+                <div class="quick-links"><a  href="https://prakriti-about.vercel.app/">About</a></div>
             </div>
     </div>
     </div>
